--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -26,6 +26,7 @@ tasks:
     prompt: "Creating and pushing tag {{.VERSION}}. Are you sure?"
     cmds:
       - 'git tag lsql/{{.VERSION}}'
+      - 'git tag {{.VERSION}}'
       - 'git push --tags'
     requires:
       vars: [VERSION]
